@@ -7,6 +7,7 @@ Version 1.8.11
 - BUG: Cached HEAD revision when doing updates. (Stefan)
 - BUG: empty path shown in tree conflict resolver dialog. (Stefan)
 - BUG: working copy revision not shown in revision graph. (Stefan)
+- BUG: Focus problems when diffing. (Stefan)
 
 Version 1.8.10
 - BUG: Fails to run on Windows XP. (Stefan)
